--- a/waterscout/index.html
+++ b/waterscout/index.html
@@ -22,6 +22,7 @@
     <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
     <script src="js/Google.js"></script>
 
+    <script src="js/chroma.js"></script>
     <script src="js/Map.js"></script>
   </body>
   
